# hack-yeah-backend

./: .dockerignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Procfile  app.py  endpoints.py  main.py  pyproject.toml  railway.toml  requirements.txt  start.sh
resources/: .~lock.Akcje hackathon - Arkusz1.csv#  .~lock.Akcje hackathon - Arkusz3.csv#  Akcje hackathon - Arkusz1.csv  Akcje hackathon - Arkusz2.csv  Akcje hackathon - Arkusz3.csv
runthroughlinehackathor/: main.py  settings.py
runthroughlinehackathor/action_selection/: _download_from_vercel_blob.py  action_list.py  random_events_list.py  select_actions.py  select_random_event.py
runthroughlinehackathor/models/: _phase.py  action.py  parameters.py  random_event.py  reaction.py  stage.py  state.py
runthroughlinehackathor/models/action/: _action_type.py  action.py  action_base.py  reaction.py
runthroughlinehackathor/state_update/: apply_action.py  create_summary.py  state_increment.py  state_update.py  update_state.py
tests/: __init__.py  test_action_selection.py  test_api.py  test_models.py  test_state_update.py
