[project]
name = "runthroughlinehackathor"
version = "0.1.0"
description = ""
authors = [
    {name = "Tesla2000",email = "fratajczak124@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
